syntax = "proto3";

import "pkg/protocol/core/base/base.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

package pbcin;

option go_package = "github.com/TencentBlueKing/bk-bscp/pkg/protocol/core/config-instance;pbcin";

message ConfigInstance {
  uint32 biz_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "业务ID" }];
  uint32 config_template_id = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "配置模板ID" }];
  string config_template_name = 3
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "配置模板名称" }];
  string file_name = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "文件名称" }];
  string set = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "集群名称" }];
  string module = 6 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模块名称" }];
  string service_instance = 7
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务实例名称" }];
  string process_alias = 8 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "进程别名" }];
  uint32 module_inst_seq = 9
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模块实例序列号" }];
  string config_version_name = 10
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "配置模版关联的版本号名称" }];
  string config_version_memo = 11
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "配置模版版本描述" }];
  uint32 cc_process_id = 12 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "CC进程ID" }];
  pbbase.Revision revision = 13;
  uint32 latest_template_revision_id = 14
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "最新的配置模版版本ID" }];
}

// ConfigInstanceSearchCondition 配置实例搜索条件
message ConfigInstanceSearchCondition {
  repeated string sets = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "集群名称" }];
  repeated string modules = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "模块名称" }];
  repeated string service_instances = 3
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务名称" }];
  repeated uint32 cc_process_ids = 4
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "进程ID" }];
  repeated string process_aliases = 5
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "进程别名" }];
  string environment = 6 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "环境" }];
}

// Choice 查询枚举值选项
message Choice {
  string id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "选项ID" }];
  string name = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "选项名称" }];
}

// ConfigInstanceFilterOptions 配置实例过滤选项
message ConfigInstanceFilterOptions {
  repeated Choice template_version_choices = 1
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "配置模版版本查询选项" }];
  uint32 latest_template_revision_id = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "最新的配置模版版本ID" }];
  string latest_template_revision_name = 3
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "最新的配置模版版本号" }];
}

message ConfigContent {
  // 原始内容（例如文件内容、脚本、配置文本）
  string content = 1;
  // 内容的 MD5 / SHA256，用于快速比对（可选但实用）
  string checksum = 2;
}

message ConfigVersion {
  // 配置内容
  ConfigContent data = 1;
  // 下发 / 生效时间（Unix 时间戳，秒）
  google.protobuf.Timestamp timestamp = 2;
  // 操作人 / 系统标识（可选）
  string operator = 3;
}

message ConfigTemplateGroup {
  uint32 config_template_id = 1
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "配置模版ID" }];
  uint32 config_template_version_id = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "配置模版版本ID" }];
  repeated uint32 cc_process_ids = 3
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "CC进程ID列表" }];
}